--- a/catalog/templates/index.html
+++ b/catalog/templates/index.html
@@ -7,4 +7,5 @@
   <p><strong>Copies:</strong> {{ num_instances }}</p>
   <p><strong>Available copies:</strong> {{ num_instances_available }}</p>
   <p><strong>Authors:</strong> {{ num_authors }}</p>
+  <p><strong> You have visted this page {{num_visits}} time{{num_visits|pluralize}}</strong></p>
 {% endblock %}
