--- a/catalog/templates/base_generic.html
+++ b/catalog/templates/base_generic.html
@@ -10,12 +10,12 @@
         <h1>Local Library</h1>
         <nav>
           <a href="{% url 'index' %}">Home</a> |
-          <a href="{% url 'books' %}">Books</a>
+          <a href="{% url 'books' %}">Books</a> |
         </nav>
         <hr>
       </header>
 
-      {% block content %}
+      <aside>
         <ul class="sidebar-nav">
            {% if user.is_authenticated %}
              <li>User: {{ user.get_username }}</li>
@@ -30,18 +30,23 @@
               <li><a href="{% url 'login' %}?next={{ request.path }}">Login</a></li>
            {% endif %}
         </ul>
-        {% if user.is_staff %}
-     <hr>
-      <ul class="sidebar-nav">
-        <li>Staff</li>
-        <li><a href="{% url 'all-borrowed' %}">All borrowed</a></li>
-        {% if perms.catalog.add_author %}
-          <li><a href="{% url 'author-create' %}">Create author</a></li>
-        {% endif %}
-     </ul>
-       {% endif %}
 
-      {% endblock %}
+        {% if user.is_staff %}
+        <hr>
+        <ul class="sidebar-nav">
+          <li>Staff</li>
+          {% if perms.catalog.add_author %}
+            <li><a href="{% url 'author-create' %}">Create author</a></li>
+          {% endif %}
+        </ul>
+        {% endif %}
+      </aside>
+
+      <main>
+        {% block content %}
+        <!-- Child templates will render here -->
+        {% endblock %}
+      </main>
     </div>
   </body>
 </html>
